# soft-fido2

./: .gitignore  .pypirc  .travis.yaml  .travis.yml  BIOMETRIC_INTEGRATION_PLAN.md  CHANGELOG.md  CREDENTIAL_METHODS_REFACTORING_PLAN.md  DEFAULT_PASSKEY_PLAN.md  MANIFEST.in  MODULE.md  PASSKEY.md  PQC_ALG_PLAN.md  README.md  SYMKEY_MIGRATION_PLAN.md  TODO.md  USBIP_FIXES_PLAN.md  build.sh  compile  deploy  deploy.sh  dev-requirements.txt  pyproject.toml  requirements.txt  run_local_dev.sh  scenario_test  setup.py  soft_fido2.py  unit_test
.github/workflows/: main.yaml
authenticator/: soft_fido2.py
fido2_authenticator/: soft_fido2.py
python_authenticator/: __init__.py  generate_passkey.sh  verify_passkey.sh
python_authenticator/fido2_authenticator/: authenticator.py  cert_utils.py  key_pair.py
python_authenticator/soft_FIDO2/: __init__.py  authenticator.py  cert_utils.py  hid_device.py  key_pair.py  usb_ip.py
python_authenticator/soft_fido2/: __init__.py  authenticator.py  cert_utils.py  key_pair.py  passkey_device.py  uhid_device.py
python_authenticator/systemd/: passkey.env  passkey.service
python_authenticator/tests/: assertion_unit_test.py  attestation_unit_test.py  conftest.py  cred_id_test.py  scenario_test.sh  unit_test.sh
rust_authenticator/: Cargo.toml  build.rs
rust_authenticator/src/: main.rs
rust_authenticator/src/authenticator/: ctap2.rs  fido2_authenticator.rs  fido_authenticator.rs  mod.rs
rust_authenticator/src/authenticator/attestation/: packed.rs  tpm.rs
rust_authenticator/src/client/: fido_client.rs
rust_authenticator/src/hid2ctap/: ctap_api.rs  hid_event.rs
rust_authenticator/src/uhid/: ctap_device.rs  device.rs  mod.rs
soft_fido2/: __init__.py  __main__.py  authenticator.py  cable.py  cert_utils.py  credential_id_migrator.py  credential_mgmt.py  ctaphid_protocol.py  dbus_notify.py  fprint_device.py  hid_device.py  key_pair.py  key_pair_refactored.py  message_queues.py  passkey_device.py  qt_app.py  systray_app.py  tpm_device.py  uhid_device.py  usb_ip.py  usbip_device.py
soft_fido2/platform/: __init__.py  dbus_notify.py  fprint_device.py  tpm_device.py  types.py
soft_fido2/qt_svc/: __init__.py  credential_service.py  passkey_service.py  platform_key_service.py
systemd/: passkey-user.service  passkey.env  passkey.service  setup_uhid.sh
tests/: assertion_unit_test.py  attestation_unit_test.py  conftest.py  cred_id_test.py  credential_recovery_test.py  cross_app_test.py  hash_storage_test.py  hkdf_seed_test.py  kdf_config_test.py  passkey_device_test.py  passkey_file_test.py  pqc_tests.py  symmetric_key_test.py  test_ec_key_types.py  tpm_derivation_test.py  unit_test.sh
util/: generate_passkey.sh  manage_creds.py  manage_creds.sh  verify_passkey.sh
(+16 files in other folders)
