[package]
name = "fido2_authenticator"
version = "0.1.0"
authors = ["Lachlan Gleeson <lgleeson@au1.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.51.0"

[dependencies]
serde_json = "1.0.40"
serde_cbor = "0.10.1"
libc = "0.2.28"
mio = "0.6.9"
nix = "0.9.0"
termios = "0.2.2"
